@@ -73,10 +73,6 @@ class MainWindow : public QMainWindow, public Ui::MainWindow
 		virtual void on_viewTrackPointsAction_triggered();
 		virtual void on_viewTrackSegmentsAction_triggered();
 		virtual void on_viewRelationsAction_triggered();
-		virtual void on_viewMoveLeftAction_triggered();
-		virtual void on_viewMoveRightAction_triggered();
-		virtual void on_viewMoveUpAction_triggered();
-		virtual void on_viewMoveDownAction_triggered();
 		virtual void on_viewSetCoordinatesAction_triggered();
 		virtual void on_editRemoveAction_triggered();
 		virtual void on_editMoveAction_triggered();
